[tool.poetry]
name = "tornflyerassistant"
version = "0.1.1"
description = ""
authors = ["Vaurkhorov(aka JuliusBlack[2100899] vaurkhorov@yandex.com"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
